<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="104dp"
        android:layout_height="44dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="120dp"
        android:text="@string/number1"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="108dp"
        android:layout_height="43dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="204dp"
        android:text="@string/number2"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/id_ans"
        android:layout_width="308dp"
        android:layout_height="76dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.469" />

    <TextView
        android:id="@+id/id_value1"
        android:layout_width="118dp"
        android:layout_height="47dp"
        android:layout_marginStart="252dp"
        android:layout_marginTop="120dp"
        android:text="@string/hint1"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/id_value2"
        android:layout_width="122dp"
        android:layout_height="45dp"
        android:layout_marginStart="252dp"
        android:layout_marginTop="204dp"
        android:text="@string/hint2"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/id_btn_add"
        android:layout_width="124dp"
        android:layout_height="47dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="428dp"
        android:text="@string/add"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/id_btn_minus"
        android:layout_width="121dp"
        android:layout_height="46dp"
        android:layout_marginStart="220dp"
        android:layout_marginTop="428dp"
        android:text="@string/minus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/id_btn_multy"
        android:layout_width="124dp"
        android:layout_height="47dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="504dp"
        android:text="@string/multiflication"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/id_btn_devide"
        android:layout_width="121dp"
        android:layout_height="45dp"
        android:layout_marginStart="220dp"
        android:layout_marginTop="504dp"
        android:text="@string/devide"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>