<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".FirstActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="95dp"
        android:layout_height="46dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="156dp"
        android:text="@string/number1"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="96dp"
        android:layout_height="43dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="232dp"
        android:text="@string/number2"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/id_input1"
        android:layout_width="209dp"
        android:layout_height="49dp"
        android:layout_marginStart="180dp"
        android:layout_marginTop="136dp"
        android:clickable="false"
        android:cursorVisible="true"
        android:ems="10"
        android:hint="@string/hint1"
        android:inputType="number"
        android:textAllCaps="true"
        android:textColor="@android:color/background_dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/id_input2"
        android:layout_width="207dp"
        android:layout_height="51dp"
        android:layout_marginStart="180dp"
        android:layout_marginTop="216dp"
        android:clickable="false"
        android:cursorVisible="true"
        android:ems="10"
        android:hint="@string/hint2"
        android:inputType="number"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/id_btn_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="172dp"
        android:layout_marginTop="380dp"
        android:text="@string/btn_ok"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>